--- a/Baz.Compiler/Baz.Compiler.csproj
+++ b/Baz.Compiler/Baz.Compiler.csproj
@@ -6,5 +6,11 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+    
+    <ItemGroup>
+        <Content Include="Examples\**\*.baz">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 
 </Project>
